Move to H2-light
fix #93